@@ -1,3 +1,6 @@
 * Enhanced `grizzled.config.Configuration` with a `forMatchingSections()`
   method that allows simple looping over sections that match a regular
   expression.
+* `grizzled.config.Configuration` now supports an alternative to the `option()`
+  methods: a `get()` method that returns `Option[String]` and does not throw
+  exceptions.
